Упрощен код, avatars выделены в отдельную таблицу