@@ -1,27 +1,24 @@
 package ru.karyeragame.paymentsystem.security;
 
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import ru.karyeragame.paymentsystem.enums.Roles;
 import ru.karyeragame.paymentsystem.user.model.User;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class UserDetailsImpl implements UserDetails {
-    private String username;
-    private String password;
-    private List<GrantedAuthority> authorities;
+    private final String username;
+    private final String password;
+    private final List<Roles> authorities;
 
     public UserDetailsImpl(User user) {
         this.username = user.getEmail();
         this.password = user.getPassword();
         System.out.println(user.getRole().name());
-        this.authorities = List.of(user.getRole().name())
-                .stream()
-                .map(SimpleGrantedAuthority::new).
-                collect(Collectors.toList());
+        this.authorities = Stream.of(user.getRole()).toList();
     }
 
     @Override
